# Student-course-registeration

./: CMakeLists.txt  README.md  course.h  lecturer.cpp  lecturer.h  main.cpp  person.cpp  person.h  student.cpp  student.h
